# calendar-generation

./: Cargo.toml  README.md  action.sh  action.yml  example-incl.toml  example.toml
.github/workflows/: ci.yml
toml-to-ical/: Cargo.toml
toml-to-ical-bin/: Cargo.toml
toml-to-ical-bin/src/: main.rs
toml-to-ical/src/: lib.rs  tests.rs
