[package]
name = "toml-to-ical"
version = "0.1.0"
edition = "2021"

authors = [ "David Wood <david.wood@huawei.com>" ]
categories = ["command-line-utilities", "date-and-time"]
description = "Utility for generating iCalendar files from a list of events in TOML format"
homepage = "https://github.com/rust-lang/calendar-generation"
keywords = ["calendar"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/rust-lang/calendar-generation"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.194", features = ["derive"] }
thiserror = "1.0.56"
